--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/models/movable-object.class.js"></script>
+    <script src="js/models/character.class.js"></script>
+    <script src="js/models/chicken.class.js"></script>
+    <script src="js/models/world.class.js"></script>
     <script src="js/game.js"></script>
 </head>
-<body>
+<body onload="init()">
     <h1>El Pollo Loco</h1>
-    <canvas width="720" height="480"></canvas>
+    <canvas width="720" height="480" id="canvas"></canvas>
 </body>
 </html>
