--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/models/character.class.js"></script>
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/world.class.js"></script>
+    <script src="js/models/cloud.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
