--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/world.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
+    <script src="js/models/background-objects.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
