--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/keyboard.class.js"></script>
     <script src="js/models/background-objects.class.js"></script>
+    <script src="js/models/level.class.js"></script>
+    <script src="js/models/endboss.class.js"></script>
+    <script src="js/levels/level1.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
