--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/models/drawable-objects.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
     <script src="js/models/chicken.class.js"></script>
-    <script src="js/models/world.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
+    <script src="js/models/status-bar.class.js"></script>
+    <script src="js/models/throwable-objects.class.js"></script>
+    <script src="js/models/world.class.js"></script>
     <script src="js/models/keyboard.class.js"></script>
     <script src="js/models/background-objects.class.js"></script>
     <script src="js/models/level.class.js"></script>
