--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" translate="no">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Pollo Loco</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="js/models/drawable-objects.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
@@ -15,13 +15,19 @@
     <script src="js/models/world.class.js"></script>
     <script src="js/models/keyboard.class.js"></script>
     <script src="js/models/background-objects.class.js"></script>
+    <script src="js/models/collectable-objects.class.js"></script>
     <script src="js/models/level.class.js"></script>
     <script src="js/models/endboss.class.js"></script>
     <script src="js/levels/level1.js"></script>
     <script src="js/game.js"></script>
-</head>
-<body onload="init()">
+  </head>
+  <body onload="init()">
     <h1>El Pollo Loco</h1>
-    <canvas width="720" height="480" id="canvas"></canvas>
-</body>
+    <div id="fullscreen">
+      <div id="btn-box">
+        <img src="img/expand-solid.svg" alt="Fullscreenbutton" onclick="enterFullscreen(canvas)">
+      </div>
+      <canvas width="720" height="480" id="canvas"></canvas>
+    </div>
+  </body>
 </html>
