Add Statusbar for Coins and Bottles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/status-bar.class.js"></script>
+    <script src="js/models/coin-status.class.js"></script>
+    <script src="js/models/bottle.status.class.js"></script>
     <script src="js/models/throwable-objects.class.js"></script>
     <script src="js/models/world.class.js"></script>
     <script src="js/models/keyboard.class.js"></script>
