--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="js/levels/level1.js"></script>
     <script src="js/game.js"></script>
   </head>
-  <body onload="init()">
+  <body>
     <h1>El Pollo Loco</h1>
     <div id="startscreen" class="startscreen">
       <img class="startImg" src="img/9_intro_outro_screens/start/startscreen_1.png" alt="" />
