--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <script src="js/models/level.class.js"></script>
     <script src="js/models/endboss.class.js"></script>
     <script src="js/levels/level1.js"></script>
+    <script src="js/game.js"></script>
 
   </head>
-  <body onload="playGameSound()">
+  <body>
     <h1>El Pollo Loco</h1>
-    <div id="startscreen" class="startscreen">
+    <div id="startscreen" class="startscreen" >
       <img class="startImg" src="img/9_intro_outro_screens/start/startscreen_1.png" alt="" />
       <div id="keyboard-legend" class="blur-background keyboard-legend" style="display: none;">
         <img class="closeButton" src="img/close2.svg" onclick="hideKeyLegend('keyboard-legend')"/>
@@ -41,10 +42,10 @@
 
     <div id="fullscreen" class="dnone">
       <div id="btn-box">
-        <img src="img/home.svg" alt="Homebutton" onclick="showStartScreen()"/>
-        <img id="mute-Button-Game" class ="Homebutton" src="img/sound.svg" alt="Sound on" onclick="muteSound('mute-Button-Game')"/>
-        <img class ="startNavigationIcon" src="img/keyboard.svg" alt="keyboard" onclick="showKeyLegend('keyboard-legend-game')"/>
-        <img src="img/expand-solid.svg" alt="Fullscreenbutton" onclick="enterFullscreen(canvas)"/>
+        <img class="cursor" src="img/home.svg" alt="Homebutton" onclick="showStartScreen()"/>
+        <img class="Homebutton cursor" id="mute-Button-Game"  src="img/sound.svg" alt="Sound on" onclick="muteSound('mute-Button-Game')"/>
+        <img class="startNavigationIcon cursor" src="img/keyboard.svg" alt="keyboard" onclick="showKeyLegend('keyboard-legend-game')"/>
+        <img class="cursor" src="img/expand-solid.svg" alt="Fullscreenbutton" onclick="enterFullscreen(canvas)"/>
       </div>
       <div id="game-over"></div>
       <div id="game-won"></div>
@@ -54,6 +55,5 @@
       </div>
       <canvas width="720" height="480" id="canvas"></canvas>
     </div>
-    <script src="js/game.js"></script>
   </body>
 </html>
