touch buttons instered

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         <img class="key-legend" src="img/tastatur-removebg.png"/>
       </div>
       <canvas width="720" height="480" id="canvas"></canvas>
+      <div class="touch-div">
+        <div class="pad4px">
+          <img id="button-left" class="touch-buttons" src="img/arrow-left.svg" alt="arrow left" onclick="touchButtonListener('button-left')">
+          <img id="button-right" class="touch-buttons" src="img/arrow-right.svg" alt="arrow right">
+        </div>
+        <div class="pad4px">
+          <img id="button-jump" class="touch-buttons" src="img/arrow-up.svg" alt="arrow up">
+          <img id="button-throw" class="touch-buttons" src="img/bottle.svg" alt="bottle">
+        </div>
+      </div>
     </div>
+    
   </body>
 </html>
