--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </div>
     <div id="fullscreen" class="dnone">
       <div id="btn-box">
+        <img id="mute-Button" class="cursor" src="img/sound.svg" alt="Sound" onclick="muteSound()">
         <img class="cursor" src="img/home.svg" alt="Homebutton" onclick="showStartScreen()"/>
         <img class="startNavigationIcon cursor" src="img/keyboard.svg" alt="keyboard" onclick="showKeyLegend('keyboard-legend-game')"/>
         <img class="cursor" src="img/expand-solid.svg" alt="Fullscreenbutton" onclick="enterFullscreen(canvas)"/>
