Note for rotate disply lower then 720px implemented

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <div class="btn" onclick="playGame()"><img class="retryIcon" src="img/revolver.svg"/>Play</div>
         <img class ="startNavigationIcon" src="img/keyboard.svg" alt="keyboard" onclick="showKeyLegend('keyboard-legend')"/>
       </div>
+      <div id="rotate-Display-Div" class="blur-background">
+        <img class="closeButton" src="img/close2.svg" alt="close" onclick="closeRotateDisplay()">
+        <img class="rotate-Display-img" src="img/rotating-phone.svg" alt="">
+      </div>
     </div>
     <div id="fullscreen" class="dnone">
       <div id="btn-box">
